--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "element-plus": "^1.3.0-beta.1",
     "eslint": "^8.6.0",
     "http-server": "^14.1.0",
+    "less": "^4.1.2",
     "pinia": "^2.0.9",
     "vite-plugin-compression": "^0.4.0",
     "vite-plugin-html": "^2.1.2",
     "vite-plugin-pwa": "^0.11.13",
     "vite-plugin-style-import": "^1.4.1",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue3-draggable": "^2.0.9",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
