--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^0.2.7",
     "@micro-zoe/micro-app": "^0.8.3",
     "@vitejs/plugin-vue-jsx": "^1.3.3",
     "element-plus": "^1.3.0-beta.1",
